# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,14 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import authRouter from "./auth";
+import scansRouter from "./scans";
+import adminRouter from "./admin";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(authRouter);
+router.use(scansRouter);
+router.use(adminRouter);
 
 export default router;
